Timeline 0.20.0, released on 30 Mars 2013
==============================================

New features, enhancements:

  
Bug fixes:



Timeline 0.19.0, released on 30 December 2012
==============================================

New features, enhancements:

  * Possibilty to define URL on events and execute "Goto URL" to open web browser.
  * Implemented 'fit week' navigation function.
  * Help text added, to describe vertical movement of events.
  
Bug fixes:

  * Build script generates zip file with only LF as line endings in files
  * Year 0 removed from timeline display when using extended date range


Timeline 0.18.0, released on 30 September 2012
==============================================

New features, enhancements:

  * Zooming with scroll wheel zooms at cursor position instead of center.

Bug fixes:

  * Adding multiple events without closing event dialog, works again.
  * Alert time comparision problem solved
  * Fixed problem with ends-today property
  * Fit millennium now works close to edges
  * Fit century now works close to edges

  

Timeline 0.17.0, released on 15 June 2012
=========================================

This is a new feature release.

New features, enhancements:

  * Possibilty to define alerts on events.
  * Non-period events can be added to container events

Bug fixes:

  * No Error when fitting month, december, when using extended timetype.

Timeline 0.16.0, released on 31 January 2012
============================================

This is a new feature release.

New features, enhancements:

  * Events can be grouped in containers

Bug fixes:

  * Timeline files with non-English names can be opened
  * Creating new locked events does not raise exception

Timeline 0.15.0, released on 30 October 2011
============================================

This is a new feature release.

New features, enhancements:

  * Custom font color for categories
  * Measure distance between events