@@ -6,6 +6,8 @@ New features, enhancements:
   
 Bug fixes:
 
+  * The function 'Duplicate Events' is now disabled when Timeline is in 
+    read-only mode.
 
 
 Timeline 0.19.0, released on 30 December 2012
